Added Google Maps API. Created Map Fragment and added it to DetailFragment

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -39,4 +39,11 @@
         tools:text="building">
     </TextView>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/mapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="com.example.schedulerapp.MapsFragment"
+        tools:layout="@layout/fragment_maps"/>
+
 </LinearLayout>
