--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,5 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:navGraph="@navigation/nav_graph"
-    tools:layout="@layout/fragment_detail" />
+    tools:layout="@layout/fragment_detail" >
+</androidx.fragment.app.FragmentContainerView>
