--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,12 +8,12 @@
     tools:context=".DetailFragment">
 
     <TextView
+        android:id="@+id/course_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:id="@+id/course_name"
-        tools:text="course">
-    </TextView>
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        tools:text="course"></TextView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,14 +30,15 @@
         android:id="@+id/time_range"
         tools:text="# - #">
     </TextView>
+
     <TextView
+        android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/time_range"
         android:textAlignment="center"
-        android:id="@+id/location"
-        tools:text="building">
-    </TextView>
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintTop_toBottomOf="@id/time_range"
+        tools:text="building"></TextView>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/mapFragment"
